--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,20 +1,119 @@
-{% extends 'base.html' %}
-
+{% extends 'auth.html' %}
+{% load static %}
 {% block title %}
 Login :: {{ block.super }}
 {% endblock %}
 
-{% block sidebar %}
-{% include 'include/_sidebar_users.html' %}
-{% endblock %}
-
-{% block content %}
-
-    <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-    </form>
-
+{% block body %}
+    <body id="kt_body" class="app-blank bgi-size-cover bgi-position-center bgi-no-repeat">
+		<!--begin::Theme mode setup on page load-->
+		<script>var defaultThemeMode = "light"; var themeMode; if ( document.documentElement ) { if ( document.documentElement.hasAttribute("data-theme-mode")) { themeMode = document.documentElement.getAttribute("data-theme-mode"); } else { if ( localStorage.getItem("data-theme") !== null ) { themeMode = localStorage.getItem("data-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-theme", themeMode); }</script>
+		<!--end::Theme mode setup on page load-->
+		<!--begin::Main-->
+		<!--begin::Root-->
+		<div class="d-flex flex-column flex-root">
+			<!--begin::Page bg image-->
+			<style>body { background-image: url('{% static 'assets/media/auth/bg4.jpg' %}'); } [data-theme="dark"] body { background-image: url('{% static 'assets/media/auth/bg4-dark.jpg' %}'); }</style>
+			<!--end::Page bg image-->
+			<!--begin::Authentication - Sign-in -->
+			<div class="d-flex flex-column flex-column-fluid flex-lg-row">
+				<!--begin::Aside-->
+				<div class="d-flex flex-center w-lg-50 pt-15 pt-lg-0 px-10">
+					<!--begin::Aside-->
+					<div class="d-flex flex-center flex-lg-start flex-column">
+						<!--begin::Logo-->
+						<a href="/" class="mb-7">
+							<img alt="Logo" src="{% static 'assets/media/logos/hub.webp' %}" />
+						</a>
+						<!--end::Logo-->
+						<!--begin::Title-->
+						<h2 class="text-white fw-normal m-0">Service tools designed for your business</h2>
+						<!--end::Title-->
+					</div>
+					<!--begin::Aside-->
+				</div>
+				<!--begin::Aside-->
+				<!--begin::Body-->
+				<div class="d-flex flex-center w-lg-50 p-10">
+					<!--begin::Card-->
+					<div class="card rounded-3 w-md-550px">
+						<!--begin::Card body-->
+						<div class="card-body p-10 p-lg-20">
+							<!--begin::Form-->
+							<form class="form w-100" method="post" novalidate="novalidate" id="kt_sign_in_form">
+                                {% csrf_token %}
+								<!--begin::Heading-->
+								<div class="text-center mb-11">
+									<!--begin::Title-->
+									<h1 class="text-dark fw-bolder mb-3">Sign In</h1>
+									<!--end::Title-->
+								</div>
+								<!--begin::Heading-->
+								<!--begin::Separator-->
+								<div class="separator separator-content my-14">
+									<span class="w-125px text-gray-500 fw-semibold fs-7">with login</span>
+								</div>
+								<!--end::Separator-->
+								<!--begin::Input group=-->
+								<div class="fv-row mb-8">
+									<!--begin::Email-->
+									<input type="text" required placeholder="login" name="{{ form.username.html_name }}" id="{{ form.username.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+									<!--end::Email-->
+								</div>
+								<!--end::Input group=-->
+								<div class="fv-row mb-3">
+									<!--begin::Password-->
+									<input type="password" placeholder="Password" name="{{ form.password.html_name }}" id="{{ form.password.auto_id }}" autocomplete="off" class="form-control bg-transparent" />
+									<!--end::Password-->
+								</div>
+								<!--end::Input group=-->
+								<!--begin::Wrapper-->
+								<div class="d-flex flex-stack flex-wrap gap-3 fs-base fw-semibold mb-8">
+									<div></div>
+									<!--begin::Link-->
+									<a href="/" class="link-primary">Forgot Password ?</a>
+									<!--end::Link-->
+								</div>
+								<!--end::Wrapper-->
+								<!--begin::Submit button-->
+								<div class="d-grid mb-10">
+									<button type="submit" class="btn btn-primary">
+										<!--begin::Indicator label-->
+										<span class="indicator-label">Sign In</span>
+										<!--end::Indicator label-->
+										<!--begin::Indicator progress-->
+										<span class="indicator-progress">Please wait...
+										<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+										<!--end::Indicator progress-->
+									</button>
+								</div>
+								<!--end::Submit button-->
+								<!--begin::Sign up-->
+								<div class="text-gray-500 text-center fw-semibold fs-6">Not a Member yet?
+								<a href="../../demo14/dist/authentication/layouts/creative/sign-up.html" class="link-primary">Sign up</a></div>
+								<!--end::Sign up-->
+							</form>
+							<!--end::Form-->
+						</div>
+						<!--end::Card body-->
+					</div>
+					<!--end::Card-->
+				</div>
+				<!--end::Body-->
+			</div>
+			<!--end::Authentication - Sign-in-->
+		</div>
+		<!--end::Root-->
+		<!--end::Main-->
+		<!--begin::Javascript-->
+		<script>var hostUrl = "assets/";</script>
+		<!--begin::Global Javascript Bundle(used by all pages)-->
+		<script src="{% static 'assets/plugins/global/plugins.bundle.js' %}"></script>
+		<script src="{% static 'assets/js/scripts.bundle.js' %}"></script>
+		<!--end::Global Javascript Bundle-->
+		<!--begin::Custom Javascript(used by this page)-->
+		<script src="{% static 'assets/js/custom/authentication/sign-in/general.js' %}"></script>
+		<!--end::Custom Javascript-->
+		<!--end::Javascript-->
+	</body>
 {% endblock %}
