--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -182,7 +182,8 @@
         </div>
     </div>
     <div class="card-body">
-                                    В ремонте устройство: {{ item.device }}<br>
+                                    Принято: {{ item.category_service }}<br>
+                                    В ремонте: {{ item.device }}<br>
                                     Услуга: {{ item.service }}<br>
                                     Серийный: {{ item.serial }}<br>
                                     Комментарий: {{ item.comment }}<br>
