--- a/orders/templates/settings/orders_settings_list.html
+++ b/orders/templates/settings/orders_settings_list.html
@@ -21,7 +21,7 @@
                             <div class="card border-light" >
                                 <div class="card-header bg-gradient">Номер: <span class="badge rounded-pill bg-info text-dark">{{ item.pk }}</span></div>
                                 <div class="card-body">
-                                    Количество использований: {{ item.device }}<br>
+                                    Активно: {{ item.active_creation }}<br>
                                 </div>
                             </div>
                             {% for related_item in related_list %}
