--- a/orders/templates/orders/sidebar_menu_tags.html
+++ b/orders/templates/orders/sidebar_menu_tags.html
@@ -168,12 +168,10 @@
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
-
-                                                            <div class="symbol-label fs-2 fw-semibold"><span class="menu-title">{{ value.title }}</span></div>
-
-
-
+                                                        <span class="menu-title">{{ value.title }}
+									                    <span class="menu-badge">
 															<span class="badge badge-success">{{ value.count }}</span>
+														</span></span>
 
 													</a>
 													<!--end:Menu link-->
