--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -16,7 +16,7 @@
 									<ul class="breadcrumb breadcrumb-dot fw-semibold text-gray-600 fs-7 my-1">
 										<!--begin::Item-->
 										<li class="breadcrumb-item text-gray-600">
-											<a href="/" class="text-gray-600 text-hover-primary">Заказы</a>
+											<a href="/orders/" class="text-gray-600 text-hover-primary">Заказы</a>
 										</li>
 										<!--end::Item-->
 										<!--begin::Item-->
@@ -134,21 +134,7 @@
 									<div class="card-body p-5 px-lg-19 py-lg-16">
 										<!--begin::Content main-->
 										<div class="mb-14">
-											<!--begin::Heading-->
-											<div class="mb-15">
-												<!--begin::Title-->
-												<h1 class="fs-2x text-dark mb-6">{{ title }}</h1>
-												<!--end::Title-->
-												<!--begin::Text-->
-												<div class="fs-5 text-gray-600 fw-semibold">В списке заказов для каждого заказа отображается информация</div>
-												<!--end::Text-->
 
-
-
-
-
-											</div>
-											<!--end::Heading-->
 											<!--begin::Body-->
 											<!--begin::ORDERS-->
 											<div class="mb-15">
@@ -157,7 +143,11 @@
         <div class="col-4">
             <div class="list-group list-group-flush" id="list-tab" role="tablist">
                 {% for item in page_obj %}
-                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">Заказ {{ item.pk }}</a>
+                    {% if forloop.counter == 1 %}
+                        <a class="list-group-item list-group-item-action active" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">Заказ {{ item.pk }}</a>
+                    {% else %}
+                        <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">Заказ {{ item.pk }}</a>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
@@ -165,10 +155,9 @@
             <div class="tab-content" id="nav-tabContent">
                 {% for item in page_obj %}
                     {% if forloop.counter == 1 %}
-                        <div class="tab-pane active show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
-
+                        <div class="tab-pane fade show active" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                     {% else %}
-                        <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
+                        <div class="tab-pane fade" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
                     {% endif %}
 <div class="card shadow-sm">
     <div class="card-header">
