--- a/orders/templates/include/_forms_orders_datalist.html
+++ b/orders/templates/include/_forms_orders_datalist.html
@@ -1,9 +1,15 @@
 {% block javascript %}
     <script>
 
+
+
     $(document).ready(function () {
 
+            $(document).on('click', '#list-item-{{ widget.name }}', function(e){
+               $('#ajax_input_{{ widget.name }}').val( $(this).text().trim());
 
+
+            });
 
             $('#ajax_input_{{ widget.name }}').keyup(function () {
                 console.log('{{ widget.name }}')
@@ -79,12 +85,14 @@
 <input id="ajax_input_{{ widget.name }}" list="{{ widget.name }}" autocomplete="off"
     {% if widget.value != None %} name="{{ widget.name }}" value="{{ widget.value|stringformat:'s' }}"{% endif %}
     {% include "django/forms/widgets/attrs.html" %}>
+
     {% for group_name, group_choices, group_index in widget.optgroups %}
-        {% if group_name %}
-            <optgroup label="{{ group_name }}">{% endif %}{% for option in group_choices %}
-                {% include option.template_name with widget=option %}{% endfor %}{% if group_name %}
-        <span class="badge rounded-pill bg-warning text-dark" id="ajax-{{ widget.name }}" name="ajax-{{ widget.name }}"></span>
-            </optgroup>{% endif %}{% endfor %}
+        {% for option in group_choices %}
+            <span class="badge rounded-pill bg-warning text-dark" id="list-item-{{ widget.name }}" name="list-item-{{ widget.name }}">
+                {% include option.template_name with widget=option %}</span>
+        {% endfor %}
+            {% endfor %}
+
 
 
 <datalist id="{{ widget.name }}">
