--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 								<div class="ms-5 ms-md-10">
 									<!--begin::Toggle-->
 									<button type="button" class="btn btn-flex btn-active-color-white align-items-cenrer justify-content-center justify-content-md-between align-items-lg-cenrer flex-md-content-between bg-white bg-opacity-10 btn-color-gray-600 px-0 ps-md-6 pe-md-5 h-30px w-30px h-md-35px w-md-200px" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start">
-										<span class="d-none d-md-inline">HUB crm</span>
+										<span class="d-none d-md-inline">МЕНЮ</span>
 										<!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
 										<span class="svg-icon svg-icon-4 ms-md-4 me-0">
 											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
