--- a/users/templates/users/users_index.html
+++ b/users/templates/users/users_index.html
@@ -6,14 +6,148 @@
 {% block content %}
 
 
+                            <!--begin::Toolbar-->
+							<div class="toolbar mb-5 mb-lg-7" id="kt_toolbar">
+								<!--begin::Page title-->
+								<div class="page-title d-flex flex-column me-3">
+									<!--begin::Title-->
+									<h1 class="d-flex text-dark fw-bold my-1 fs-3">{{ title }}</h1>
+									<!--end::Title-->
+									<!--begin::Breadcrumb-->
+									<ul class="breadcrumb breadcrumb-dot fw-semibold text-gray-600 fs-7 my-1">
+										<!--begin::Item-->
+										<li class="breadcrumb-item text-gray-600">
+											<a href="/orders/" class="text-gray-600 text-hover-primary">Заказы</a>
+										</li>
+										<!--end::Item-->
+										<!--begin::Item-->
+										<li class="breadcrumb-item text-gray-500">{{ title }}</li>
+										<!--end::Item-->
+									</ul>
+									<!--end::Breadcrumb-->
+								</div>
+								<!--end::Page title-->
+								<!--begin::Actions-->
+								<div class="d-flex align-items-center py-2 py-md-1">
+									<!--begin::Wrapper-->
+									<div class="me-3">
+										<!--begin::Menu-->
+										<a href="#" class="btn btn-light fw-bold" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+										<!--begin::Svg Icon | path: icons/duotune/general/gen031.svg-->
+										<span class="svg-icon svg-icon-5 svg-icon-gray-500 me-1">
+											<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M19.0759 3H4.72777C3.95892 3 3.47768 3.83148 3.86067 4.49814L8.56967 12.6949C9.17923 13.7559 9.5 14.9582 9.5 16.1819V19.5072C9.5 20.2189 10.2223 20.7028 10.8805 20.432L13.8805 19.1977C14.2553 19.0435 14.5 18.6783 14.5 18.273V13.8372C14.5 12.8089 14.8171 11.8056 15.408 10.964L19.8943 4.57465C20.3596 3.912 19.8856 3 19.0759 3Z" fill="currentColor" />
+											</svg>
+										</span>
+										<!--end::Svg Icon-->Filter</a>
+										<!--begin::Menu 1-->
+										<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_62fe696a6df35">
+											<!--begin::Header-->
+											<div class="px-7 py-5">
+												<div class="fs-5 text-dark fw-bold">Filter Options</div>
+											</div>
+											<!--end::Header-->
+											<!--begin::Menu separator-->
+											<div class="separator border-gray-200"></div>
+											<!--end::Menu separator-->
+											<!--begin::Form-->
+											<div class="px-7 py-5">
+												<!--begin::Input group-->
+												<div class="mb-10">
+													<!--begin::Label-->
+													<label class="form-label fw-semibold">Status:</label>
+													<!--end::Label-->
+													<!--begin::Input-->
+													<div>
+														<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Select option" data-dropdown-parent="#kt_menu_62fe696a6df35" data-allow-clear="true">
+															<option></option>
+															<option value="1">Approved</option>
+															<option value="2">Pending</option>
+															<option value="2">In Process</option>
+															<option value="2">Rejected</option>
+														</select>
+													</div>
+													<!--end::Input-->
+												</div>
+												<!--end::Input group-->
+												<!--begin::Input group-->
+												<div class="mb-10">
+													<!--begin::Label-->
+													<label class="form-label fw-semibold">Member Type:</label>
+													<!--end::Label-->
+													<!--begin::Options-->
+													<div class="d-flex">
+														<!--begin::Options-->
+														<label class="form-check form-check-sm form-check-custom form-check-solid me-5">
+															<input class="form-check-input" type="checkbox" value="1" />
+															<span class="form-check-label">Author</span>
+														</label>
+														<!--end::Options-->
+														<!--begin::Options-->
+														<label class="form-check form-check-sm form-check-custom form-check-solid">
+															<input class="form-check-input" type="checkbox" value="2" checked="checked" />
+															<span class="form-check-label">Customer</span>
+														</label>
+														<!--end::Options-->
+													</div>
+													<!--end::Options-->
+												</div>
+												<!--end::Input group-->
+												<!--begin::Input group-->
+												<div class="mb-10">
+													<!--begin::Label-->
+													<label class="form-label fw-semibold">Notifications:</label>
+													<!--end::Label-->
+													<!--begin::Switch-->
+													<div class="form-check form-switch form-switch-sm form-check-custom form-check-solid">
+														<input class="form-check-input" type="checkbox" value="" name="notifications" checked="checked" />
+														<label class="form-check-label">Enabled</label>
+													</div>
+													<!--end::Switch-->
+												</div>
+												<!--end::Input group-->
+												<!--begin::Actions-->
+												<div class="d-flex justify-content-end">
+													<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-2" data-kt-menu-dismiss="true">Reset</button>
+													<button type="submit" class="btn btn-sm btn-primary" data-kt-menu-dismiss="true">Apply</button>
+												</div>
+												<!--end::Actions-->
+											</div>
+											<!--end::Form-->
+										</div>
+										<!--end::Menu 1-->
+										<!--end::Menu-->
+									</div>
+									<!--end::Wrapper-->
+									<!--begin::Button-->
+									<a href="#" class="btn btn-dark fw-bold" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app" id="kt_toolbar_primary_button">Create</a>
+									<!--end::Button-->
+								</div>
+								<!--end::Actions-->
+							</div>
+							<!--end::Toolbar-->
+
+							<!--begin::Post-->
+							<div class="content flex-column-fluid" id="kt_content">
+								<!--begin::About card-->
+								<div class="card">
+									<!--begin::Body-->
+									<div class="card-body p-5 px-lg-19 py-lg-16">
+										<!--begin::Content main-->
+										<div class="mb-14">
+
+											<!--begin::Body-->
+											<!--begin::ORDERS-->
+											<div class="mb-15">
+
+	   <div class="row">
+
 {% for dict_item in page_obj %}
    {% for key, value in dict_item.items %}
       <h1>Key: {{key}}</h1>
       <h2>Value: {{value}}</h2>
    {% endfor %}
 {% endfor %}
-
-    <div class="row">
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
                 {% for item in page_obj %}
@@ -21,6 +155,7 @@
                 {% endfor %}
             </div>
         </div>
+
         <div class="col-8">
             <div class="tab-content" id="nav-tabContent">
                 {% for item in page_obj %}
@@ -39,7 +174,7 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
+
     <br><br>
     <nav aria-label="...">
         <ul class="pagination">
@@ -72,4 +207,68 @@
             {% endif %}
         </ul>
     </nav>
+
+
+    <br><br>
+    <nav aria-label="...">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1&filter={{ filter }}">&laquo; В начало</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}&filter={{ filter }}">Предудущая</a>
+                </li>
+            {% endif %}
+            {% for p in page_obj.paginator.page_range %}
+                {% if page_obj.number == p %}
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">{{ p }}</span>
+                    </li>
+                {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ p }}&filter={{ filter }}">{{ p }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}&filter={{ filter }}">Следующая</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&filter={{ filter }}"> В конец &raquo;</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+											</div>
+											<!--end::ORDERS-->
+											<!--end::Body-->
+										</div>
+										<!--end::Content main-->
+									</div>
+									<!--end::Body-->
+								</div>
+								<!--end::About card-->
+							</div>
+							<!--end::Post-->
+							<!--begin::Footer-->
+							<div class="footer py-4 d-flex flex-column flex-md-row flex-stack" id="kt_footer">
+								<!--begin::Copyright-->
+								<div class="text-dark order-2 order-md-1">
+									<span class="text-muted fw-semibold me-1">2022&copy;</span>
+									<a href="/" target="_blank" class="text-gray-800 text-hover-primary">Pipe crm</a>
+								</div>
+								<!--end::Copyright-->
+								<!--begin::Menu-->
+								<ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
+									<li class="menu-item">
+										<a href="#" target="_blank" class="menu-link px-2">About</a>
+									</li>
+								</ul>
+								<!--end::Menu-->
+							</div>
+							<!--end::Footer-->
+
+
 {% endblock %}
