--- a/templates/base.html
+++ b/templates/base.html
@@ -783,7 +783,55 @@
 									<!--end::User account menu-->
 								</div>
                                 {% else %}
-                                <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
+                                <div class="d-flex align-items-center ms-1" id="kt_header_user_menu_toggle">
+									<!--begin::User info-->
+									<div class="btn btn-flex align-items-center bg-hover-white bg-hover-opacity-10 py-2 px-2 px-md-3" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
+										<!--begin::Name-->
+										<div class="d-none d-md-flex flex-column align-items-end justify-content-center me-2 me-md-4">
+											<span class="text-muted fs-8 fw-semibold lh-1 mb-1">NO LOGIN</span>
+										</div>
+										<!--end::Name-->
+										<!--begin::Symbol-->
+										<div class="symbol symbol-30px symbol-md-40px">
+											<img src="{% static 'assets/media/avatars/blank.png' %}" alt="image" />
+										</div>
+										<!--end::Symbol-->
+									</div>
+									<!--end::User info-->
+									<!--begin::User account menu-->
+									<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg menu-state-color fw-semibold py-4 fs-6 w-275px" data-kt-menu="true">
+										<!--begin::Menu item-->
+										<div class="menu-item px-3">
+											<div class="menu-content d-flex align-items-center px-3">
+												<!--begin::Avatar-->
+												<div class="symbol symbol-50px me-5">
+													<img alt="Logo" src="{% static 'assets/media/avatars/blank.png' %}" />
+												</div>
+												<!--end::Avatar-->
+												<!--begin::Username-->
+												<div class="d-flex flex-column">
+													<div class="fw-bold d-flex align-items-center fs-5">NO LOGIN
+													<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span></div>
+													<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">mail@mail.com</a>
+												</div>
+												<!--end::Username-->
+											</div>
+										</div>
+										<!--end::Menu item-->
+										<!--begin::Menu separator-->
+										<div class="separator my-2"></div>
+										<!--end::Menu separator-->
+										<!--begin::Menu item-->
+										<div class="menu-item px-5">
+											<a href="{% url 'login' %}" class="menu-link px-5">Login</a>
+										</div>
+                                        <div class="menu-item px-5">
+											<a href="{% url 'register' %}" class="menu-link px-5">Registr</a>
+										</div>
+										<!--end::Menu item-->
+									</div>
+									<!--end::User account menu-->
+								</div>
                                 {% endif %}
 								<!--end::User -->
 							</div>
