--- a/templates/base.html
+++ b/templates/base.html
@@ -631,7 +631,7 @@
 								<!--end::Theme mode-->
 
 								<!--begin::User-->
-                                {% if user.is_authenticated %}
+                                {% if request.user.is_authenticated %}
 								<div class="d-flex align-items-center ms-1" id="kt_header_user_menu_toggle">
 									<!--begin::User info-->
 									<div class="btn btn-flex align-items-center bg-hover-white bg-hover-opacity-10 py-2 px-2 px-md-3" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end">
@@ -732,11 +732,6 @@
 											<!--end::Menu sub-->
 										</div>
 										<!--end::Menu item-->
-										<!--begin::Menu item-->
-										<div class="menu-item px-5">
-											<a href="../../demo14/dist/account/statements.html" class="menu-link px-5">My Statements</a>
-										</div>
-										<!--end::Menu item-->
 										<!--begin::Menu separator-->
 										<div class="separator my-2"></div>
 										<!--end::Menu separator-->
@@ -762,7 +757,7 @@
 													<a href="../../demo14/dist/account/settings.html" class="menu-link d-flex px-5">
 													<span class="symbol symbol-20px me-4">
 														<img class="rounded-1" src="#" alt="" />
-													</span>Spanish</a>
+													</span>Russia</a>
 												</div>
 												<!--end::Menu item-->
 											</div>
@@ -856,19 +851,8 @@
 							<!--end::Aside menu-->
 							<!--begin::Footer-->
 							<div class="aside-footer flex-column-auto pt-5 pb-7 px-7" id="kt_aside_footer">
-								<a href="https://preview.keenthemes.com/html/metronic/docs" class="btn btn-bg-light btn-color-gray-500 btn-active-color-gray-900 text-nowrap w-100" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss-="click" title="200+ in-house components and 3rd-party plugins">
+								<a href="https://preview.keenthemes.com/html/metronic/docs">
 									<span class="btn-label">Docs & Components</span>
-									<!--begin::Svg Icon | path: icons/duotune/general/gen005.svg-->
-									<span class="svg-icon btn-icon svg-icon-2">
-										<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-											<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM12.5 18C12.5 17.4 12.6 17.5 12 17.5H8.5C7.9 17.5 8 17.4 8 18C8 18.6 7.9 18.5 8.5 18.5L12 18C12.6 18 12.5 18.6 12.5 18ZM16.5 13C16.5 12.4 16.6 12.5 16 12.5H8.5C7.9 12.5 8 12.4 8 13C8 13.6 7.9 13.5 8.5 13.5H15.5C16.1 13.5 16.5 13.6 16.5 13ZM12.5 8C12.5 7.4 12.6 7.5 12 7.5H8C7.4 7.5 7.5 7.4 7.5 8C7.5 8.6 7.4 8.5 8 8.5H12C12.6 8.5 12.5 8.6 12.5 8Z" fill="currentColor" />
-											<rect x="7" y="17" width="6" height="2" rx="1" fill="currentColor" />
-											<rect x="7" y="12" width="10" height="2" rx="1" fill="currentColor" />
-											<rect x="7" y="7" width="6" height="2" rx="1" fill="currentColor" />
-											<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor" />
-										</svg>
-									</span>
-									<!--end::Svg Icon-->
 								</a>
 							</div>
 							<!--end::Footer-->
