--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -1,12 +1,10 @@
 <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg fw-semibold w-200px pb-3" data-kt-menu="true">
 										<!--begin::Menu item-->
-                                        {% if user.is_authenticated %}
-                                            HERE!
+                                        {% if request.user.is_authenticated %}
 										<div class="menu-item px-3">
 											<a href="{% url 'add_news' %}" class="menu-link px-3">Новости</a>
 										</div>
 										<!--end::Menu item-->
-
                                         {% for key, value in nav.items %}
                                         <!--begin::Menu item-->
 										<div class="menu-item px-3">
@@ -14,11 +12,9 @@
 										</div>
 										<!--end::Menu item-->
                                         {% endfor %}
-
                                         <!--begin::Menu separator-->
 										<div class="separator mb-3 opacity-75"></div>
 										<!--end::Menu separator-->
-
 										<!--begin::Menu item-->
 										<div class="menu-item px-3" data-kt-menu-trigger="hover" data-kt-menu-placement="right-start">
 											<a href="#" class="menu-link px-3">Настройки</a>
@@ -34,7 +30,6 @@
                                                     </a>
                                                 </div>
                                                 <!--end::Menu item-->
-
                                                 <!--begin::Menu item-->
                                                 <div class="menu-item">
                                                     <a href="{% url 'view_plugins' %}" class="menu-link">
@@ -45,7 +40,6 @@
                                                     </a>
                                                 </div>
                                                 <!--end::Menu item-->
-
                                                 <!--begin::Menu item-->
                                                 <div class="menu-item">
                                                     <a href="{% url 'view_repository' %}" class="menu-link">
@@ -61,7 +55,7 @@
                                             </div>
 										<!--end::Menu item-->
                                         {% else %}
-                      										<div class="menu-item px-3">
+                      					<div class="menu-item px-3">
 											<a href="{% url 'login' %}" class="menu-link px-3">Not login</a>
 										</div>
                   {% endif %}
