--- a/templates/base.html
+++ b/templates/base.html
@@ -740,7 +740,7 @@
 											<a href="#" class="menu-link px-5">
 												<span class="menu-title position-relative">Language
 												<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English
-												<img class="w-15px h-15px rounded-1 ms-2" src="#" alt="" /></span></span>
+												<img class="w-15px h-15px rounded-1 ms-2" src="" alt="" /></span></span>
 											</a>
 											<!--begin::Menu sub-->
 											<div class="menu-sub menu-sub-dropdown w-175px py-4">
@@ -748,7 +748,7 @@
 												<div class="menu-item px-3">
 													<a href="../../demo14/dist/account/settings.html" class="menu-link d-flex px-5 active">
 													<span class="symbol symbol-20px me-4">
-														<img class="rounded-1" src="#" alt="" />
+														<img class="rounded-1" src="" alt="" />
 													</span>English</a>
 												</div>
 												<!--end::Menu item-->
@@ -756,7 +756,7 @@
 												<div class="menu-item px-3">
 													<a href="../../demo14/dist/account/settings.html" class="menu-link d-flex px-5">
 													<span class="symbol symbol-20px me-4">
-														<img class="rounded-1" src="#" alt="" />
+														<img class="rounded-1" src="" alt="" />
 													</span>Russia</a>
 												</div>
 												<!--end::Menu item-->
