--- a/orders/templates/orders/order_add.html
+++ b/orders/templates/orders/order_add.html
@@ -20,7 +20,7 @@
         Обычный заказ
     {% endif %}
     </h3>
-    <form action="{% url 'order_add'%}?category={{ tag }}" method="post">
+    <form action="{% url 'order_add'%}?category={{ tag }}" method="POST">
         {% csrf_token %}
         {% for x in forms %}
             {{ x.as_p }}
