--- a/plugins/templates/plugins/plugins_tags.html
+++ b/plugins/templates/plugins/plugins_tags.html
@@ -22,7 +22,7 @@
                 {% endfor %}
             <br>
             Связать c этим плагином:
-                <form action="{{ plugins_item.get_absolute_url }}related" method="post">
+                <form action="{{ plugins_item.get_absolute_url }}related" method="POST">
                     {% csrf_token %}
                     {{ form.non_field_errors }}
                     {{ form.as_p }}
