--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,8 +1,7 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<!--begin::Head-->
-	<head><base href="../../../"/>
+	<head>
 		<meta charset="utf-8" />
 	</head>
 {% block body %}
