--- a/templates/base.html
+++ b/templates/base.html
@@ -643,7 +643,7 @@
 										<!--end::Name-->
 										<!--begin::Symbol-->
 										<div class="symbol symbol-30px symbol-md-40px">
-											<img src="{% static 'assets/media/avatars/blank.png' %}" alt="image" />
+											<img src="{% static 'assets/media/avatars/blank.jpg' %}" alt="image" />
 										</div>
 										<!--end::Symbol-->
 									</div>
@@ -655,7 +655,7 @@
 											<div class="menu-content d-flex align-items-center px-3">
 												<!--begin::Avatar-->
 												<div class="symbol symbol-50px me-5">
-													<img alt="Logo" src="{% static 'assets/media/avatars/blank.png' %}" />
+													<img alt="Logo" src="{% static 'assets/media/avatars/blank.jpg' %}" />
 												</div>
 												<!--end::Avatar-->
 												<!--begin::Username-->
@@ -788,7 +788,7 @@
 										<!--end::Name-->
 										<!--begin::Symbol-->
 										<div class="symbol symbol-30px symbol-md-40px">
-											<img src="{% static 'assets/media/avatars/blank.png' %}" alt="image" />
+											<img src="{% static 'assets/media/avatars/blank.jpg' %}" alt="image" />
 										</div>
 										<!--end::Symbol-->
 									</div>
@@ -800,7 +800,7 @@
 											<div class="menu-content d-flex align-items-center px-3">
 												<!--begin::Avatar-->
 												<div class="symbol symbol-50px me-5">
-													<img alt="Logo" src="{% static 'assets/media/avatars/blank.png' %}" />
+													<img alt="Logo" src="{% static 'assets/media/avatars/blank.jpg' %}" />
 												</div>
 												<!--end::Avatar-->
 												<!--begin::Username-->
